<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">What ToDo</string>
    <string name="app_name2">What ToDo - To Do List &amp; Task Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Main Activity -->
    <string name="what_todo_btn">What ToDo?</string>
    <string name="my_lists_btn">My Lists</string>
    <string name="new_list_btn">Create new list</string>
    <string name="add_todo_btn">Add</string>
    <string name="add_todo_edit_text">Got something ToDo?</string>

    <!-- My List Activity -->
    <string name="my_list_text_view">ToDo Lists</string>
    <string name="add_list_edit_text">New Category</string>
    <string name="add_list_btn">Add</string>
    <string name="delete_list_btn">delete</string>
    <string name="delete_list_message">Are you sure?</string>
    <string name="my_lists">My Lists</string>

    <string name="important_list">Important</string>

    <!-- New List -->
    <string name="title_activity_new_list">New List</string>
    <string name="list_name_text_view">Name</string>
    <string name="list_name_edit_text">Groceries...?</string>

    <!-- Tasks -->
    <string name="task_textview">Task</string>
    <string name="reminder_textview">Reminder:</string>
    <string name="update_task_btn">Update</string>
    <string name="delete_task_btn">Delete</string>
    <string name="finish_task_btn">Finished!</string>
    <string name="unfinish_task_btn">Not finished..</string>
    <string name="level_of_importance_textview">Important</string>
    <string name="list_belonging_to">List:</string>

    <!-- New Task -->
    <string name="title_activity_new_task">NewTaskActivity</string>
    <string name="task_name_text_view">Task</string>
    <string name="task_date">by</string>
    <string name="task_time">at</string>
    <string name="title_activity_my_list">My List</string>
    <string name="title_activity_main_list">ListActivity</string>
    <string name="title_activity_list">ToDo List</string>
    <string name="title_activity_what_to_do">What ToDo?</string>
    <string name="new_category_hint">New Category?</string>
    <string name="category_text_view">List Category</string>

    <!-- What To Do -->
    <string name="maybe_later_btn">Maybe later</string>
    <string name="you_should_text_view">You should</string>
    <string name="recent_tasks_btn">Recent</string>
    <string name="important_tasks_btn">Important</string>
    <string name="title_activity_important_task">Important</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>

    <string name="important_list_textview">Important!</string>

    <string name="todo_tab">TODO</string>
    <string name="my_list_tab">LISTS</string>
    <string name="important_tab">IMPORTANT</string>

</resources>
