<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/what_todo_bg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame" >

    <View android:id="@+id/fakeView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/what_todo_button_custom"
        android:textColor="#FFF"
        android:text="@string/update_task_btn"
        android:id="@+id/update_task_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/fakeView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000"
        android:textColor="#FFF"
        android:padding="8dp"
        android:hint="@string/add_todo_edit_text"
        android:id="@+id/task_edittext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/level_of_importance_textview"
        android:id="@+id/importance_textview"
        android:layout_below="@+id/task_edittext"
        android:layout_alignParentLeft="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/level_of_importance_seekbar"
        android:max="3"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:indeterminate="false"
        android:layout_below="@+id/task_edittext"
        android:layout_alignLeft="@+id/fakeView"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/reminder_textview"
        android:id="@+id/reminder_textview"
        android:layout_below="@+id/importance_textview"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/level_of_importance_textview"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_below="@+id/task_edittext"
        android:layout_toRightOf="@+id/importance_textview"
        android:layout_toLeftOf="@+id/level_of_importance_seekbar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/what_todo_button_custom"
        android:textColor="#FFF"
        android:text="@string/delete_task_btn"
        android:id="@+id/delete_task_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/level_of_importance_seekbar"
        android:layout_toRightOf="@+id/fakeView" />

</RelativeLayout>