<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@drawable/what_todo_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame" >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:textColor="#FFF"
        android:padding="8dp"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:id="@+id/add_todo_edit_text"
        android:hint="@string/add_todo_edit_text"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/speak_btn"
        android:layout_marginTop="39dp"
        android:layout_toLeftOf="@+id/add_todo_btn" />

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/add_button_custom2"
        android:id="@+id/add_todo_btn"
        android:layout_below="@+id/delete_list_btn"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/taskListView" />

    <View android:id="@+id/fakeView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/what_todo_button"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:padding="8dp"
        android:id="@+id/list_text_view"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/delete_list_btn" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/taskListView"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/add_todo_edit_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/what_todo_button_custom"
        android:textColor="#FFF"
        android:textStyle="bold"
        android:text="@string/what_todo_btn"
        android:id="@+id/what_todo_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="speakButtonClicked"
        android:id="@+id/speak_btn"
        android:background="@drawable/mic_custom"
        android:layout_alignBottom="@+id/add_todo_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/add_todo_btn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_list_btn"
        android:id="@+id/delete_list_btn"
        android:background="@drawable/what_todo_button_custom"
        android:textColor="#FFF"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/list_text_view" />

</RelativeLayout>
